--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.mkyong</groupId>
   <artifactId>MyWebApp</artifactId>
   <packaging>war</packaging>
-  <version>1.0.2</version>
+  <version>2.0.0-SNAPSHOT</version>
   <name>MyWebApp Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
