--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.mkyong</groupId>
   <artifactId>MyWebApp</artifactId>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
   <version>2.0.0-SNAPSHOT</version>
   <name>MyWebApp Maven Webapp</name>
   <url>http://maven.apache.org</url>
